# 2026-ml-bom-training

./: .gitignore  README.md  job-script.pbs  pyproject.toml
1-Anemoi/: README.md  training_aifs-ens.ipynb  training_aifs-single.ipynb
1-Anemoi/configs/: aifs_ens_minimal.yaml  aifs_single_minimal.yaml
1-Anemoi/configs-new/: aifs_ens_minimal.yaml  aifs_single_minimal.yaml
1-Anemoi/configs-new/diagnostics/: evaluation.yaml
1-Anemoi/configs-new/model/: transformer_ens.yaml
1-Anemoi/configs/system/: pbs.yaml
1-Anemoi/configs/system/hardware/: pbs.yaml
2-run-AIFS/: README.md  command_line.md  config.yaml  inference_aifs-ens.ipynb  inference_aifs-single.ipynb
Extra/: README.md
